fix use of Paths architecture violation